--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,21 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  format:
+  # This workflow contains a single job called "check"
+  check:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       # Runs black check on repository
       - name: Black Check
         uses: jpetrucciani/black-check@master
+
+      - name: Mypy Check
+        uses: jpetrucciani/mypy-check@master
+        with:
+          mypy_flags: '--install-types --non-interactive'
